[gd_scene load_steps=12 format=3 uid="uid://c1pyhqepqvc3p"]

[ext_resource type="Script" uid="uid://dp053l0nd1b0m" path="res://ui/menu/MenuOverlay.gd" id="1_7wiv4"]
[ext_resource type="PackedScene" uid="uid://cray3v3t8m613" path="res://ui/menu/MenuScoreLine.tscn" id="1_ohhsm"]
[ext_resource type="Shader" uid="uid://b788psikbqmfe" path="res://shaders/circles_gradient.gdshader" id="2_0iqbr"]
[ext_resource type="Shader" uid="uid://ckg3yjdxjh0ug" path="res://shaders/god_ray.gdshader" id="3_palon"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohhsm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_palon"]
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.54918, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.770492, 0.770492, 0.770492, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k3kn7"]
gradient = SubResource("Gradient_palon")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_upjdn"]
shader = ExtResource("2_0iqbr")
shader_parameter/gradient = SubResource("GradientTexture2D_k3kn7")
shader_parameter/circle_color = Color(0.223529, 0.223529, 0.223529, 1)
shader_parameter/circle_multiplier = 20.0
shader_parameter/speed = 0.5
shader_parameter/direction = Vector2(1, 1)
shader_parameter/rotation = Transform2D(1, -1, 1, 1, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k3kn7"]
shader = ExtResource("3_palon")
shader_parameter/angle = 0.0
shader_parameter/position = 0.0
shader_parameter/spread = 0.677
shader_parameter/cutoff = -0.508
shader_parameter/falloff = 1.0
shader_parameter/edge_fade = 0.233
shader_parameter/speed = 5.0
shader_parameter/ray1_density = 10.0
shader_parameter/ray2_density = 10.0
shader_parameter/ray2_intensity = 0.122
shader_parameter/color = Color(0.964706, 0.803922, 0.14902, 1)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wiv4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1kcf"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MenuOverlay" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ohhsm")
script = ExtResource("1_7wiv4")

[node name="GameFinishedBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_upjdn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BestScoreBackground" type="Panel" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_k3kn7")
layout_mode = 0
offset_left = -85.0
offset_top = -10.0
offset_right = 1030.0
offset_bottom = 950.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_right = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopMargin" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7wiv4")

[node name="FinishedGameTitle" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Partie terminée"
horizontal_alignment = 1

[node name="ScoreContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "Score: "
uppercase = true

[node name="Score" type="Label" parent="VBoxContainer/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "678"

[node name="TopScoreContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TopScoreLabel" type="Label" parent="VBoxContainer/TopScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Meilleur score: "

[node name="TopScore" type="Label" parent="VBoxContainer/TopScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "678"

[node name="Spacer2" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7wiv4")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_direction = 3
layout_mode = 2

[node name="GamesNumberLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "parties jouées"

[node name="GamesNumber" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1234"

[node name="Spacer4" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7wiv4")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 900)
layout_mode = 2
horizontal_scroll_mode = 3

[node name="ScoresList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ScoreLine" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine2" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine3" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine4" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine5" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine6" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine7" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine8" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine9" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine10" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine11" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine12" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine13" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine14" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine15" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine16" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine17" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine18" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine19" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine20" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine21" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine22" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine23" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine24" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine25" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine26" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine27" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine28" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine29" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine30" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine31" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine32" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine33" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine34" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine35" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine36" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine37" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine38" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine39" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine40" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine41" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine42" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine43" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine44" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine45" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="ScoreLine46" parent="VBoxContainer/ScrollContainer/ScoresList" instance=ExtResource("1_ohhsm")]
layout_mode = 2

[node name="Spacer" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7wiv4")

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 80
text = "Recommencer"

[node name="Spacer3" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7wiv4")

[node name="HideMenuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 50
text = "Fermer le menu"

[node name="BottomMargin" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_q1kcf")

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HideMenuButton" to="." method="_on_hide_menu_button_pressed"]
